--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   http: ^1.2.0
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
@@ -66,3 +67,13 @@ flutter:
     - .env
     - assets/
     - assets/app_icon.png
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_icon.png"
+  adaptive_icon_foreground: "assets/foreground.png"
+  adaptive_icon_background: "assets/background.png"
+  web:
+    generate: true
+    image_path: "assets/app_icon.png"
